Fix button layout in tiny edit bars. text-wrap does not work in Safari on iOS

--- a/src/static/editing.css
+++ b/src/static/editing.css
@@ -28,7 +28,7 @@
 
 @container (max-width: 80px) {
   div.dg-edit-bar-buttons {
-    text-wrap: wrap;
+    white-space: normal;
   }
 }
 
